# mcp-pyodbc-server

./: README.md  pyproject.toml
mcp_pyodbc_server/: __init__.py  server.py
